--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -11,3 +11,24 @@
     <br />
   </div>
 </div>
+
+<br />
+<div class="row feature text-center">
+  <div class="col-12 col-sm">
+    <h3>Amazing Courses</h3>
+    <br />
+    <p>Choose from lots of different courses to help you with the perfect picture.</p>
+  </div>
+
+  <div class="col-12 col-sm">
+    <h3>Learn everything at your own pace</h3>
+    <br />
+    <p>Dont let the course get in the way of your life, pick up where you left off with ease.</p>
+  </div>
+
+  <div class="col-12 col-sm">
+    <h3>Join a great community</h3>
+    <br />
+    <p>Need help? Just ask our community for a quick reply.</p>
+  </div>
+</div>
