--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,46 +10,56 @@
   </head>
 
   <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Picnix</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Students</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <% if user_signed_in? %>          
-                <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
-                <% else %>
-                <%= link_to 'Log in', new_user_session_path, class: 'dropdown-item' %>
-                <%= link_to 'Sign up', new_user_registration_path, class: 'dropdown-item' %>
-              <% end %>
-              <div class="dropdown-divider"></div>
-              <%= link_to 'About', '#', class: 'dropdown-item' %>
-              </div>
+    <div id="flex-content-container">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Picnix</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-        </ul>
-      </div>
-    </nav>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Students</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <% if user_signed_in? %>          
+                  <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+                  <% else %>
+                  <%= link_to 'Log in', new_user_session_path, class: 'dropdown-item' %>
+                  <%= link_to 'Sign up', new_user_registration_path, class: 'dropdown-item' %>
+                <% end %>
+                <div class="dropdown-divider"></div>
+                <%= link_to 'About', '#', class: 'dropdown-item' %>
+                </div>
+              </li>
+          </ul>
+        </div>
+      </nav>
 
-    <div class="container">
-      <% if notice.present? %>
-        <p class="alert alert-info"><%= notice %></p>
-      <% end %>
-      <% if alert.present? %>
-        <p class="alert alert-danger"><%= alert %></p>
-      <% end %>
+      <div class="container">
+        <% if notice.present? %>
+          <p class="alert alert-info"><%= notice %></p>
+        <% end %>
+        <% if alert.present? %>
+          <p class="alert alert-danger"><%= alert %></p>
+        <% end %>
+      </div>
+
+      <%= yield %>
     </div>
 
-    <%= yield %>
+    <div id="footer">
+      <div class="container">
+        <b>Footer Here</b>
+        <br />
+        <%= link_to 'Link', '#' %>
+      </div>
+    </div>
+
   </body>
 </html>
