re-added lesson subtitle in show

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -17,7 +17,7 @@
           <% section.lessons.each do |lesson| %>
             <li>
               <b><%= lesson.title %></b>
-              -
+              <p>- <%= lesson.subtitle %></p>
             </li>
           <% end %>
         </ul>
