--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,6 +7,7 @@
     <h2>
       <%= link_to course.title, course_path(course) %>
     </h2>
+    <%= image_tag course.image, class: 'img-fluid' %>
     <br />
     <div class="row">
       <div class="col-sm-8 col-12">
@@ -19,3 +20,5 @@
     <br clear="clr" />
   <% end %>
 </div>
+
+          
