--- a/app/views/instructor/lessons/new.html.erb
+++ b/app/views/instructor/lessons/new.html.erb
@@ -6,7 +6,7 @@
     <%= f.input :subtitle %>
     <%= f.input :video %>
     <br />
-    <%= f.submit :"Add a section", class: 'btn btn-primary' %>
+    <%= f.submit :"Add a lesson", class: 'btn btn-primary' %>
     <br />
     <br />
   <% end %>
