--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -25,7 +25,7 @@
   </div>
 
   <ul>
-    <% current_course.sections.each do |section| %>
+    <% current_course.sections.rank(:row_order).each do |section| %>
       <li>
         <%= section.title %>
         <%= link_to 'New Lesson', new_instructor_section_lesson_path(section), class: 'float-right btn btn-primary btn-sm' %>
@@ -37,7 +37,6 @@
             </li>
           <% end %>
         </ul>
-        <br class="clr" />
       </li>
     <% end %>
   </ul>
