--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Students</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <% if user_signed_in? %>          
+                <% if user_signed_in? %> 
+                  <%= link_to 'My Dashboard', dashboard_path, class: 'dropdown-item' %>         
                   <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
                   <% else %>
                   <%= link_to 'Log in', new_user_session_path, class: 'dropdown-item' %>
