--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -16,14 +16,19 @@ body {
   position: relative;
   width: 100%;
   min-height: 100px;
-  background-color: rgba(36,32,33,0.9);
+  background-color: rgba(36, 32, 33, 0.9);
   color: white;
   font-family: "Helvetica Neue", Helvetica;
   padding: 10px 0px;
-  margin-top: 30px; 
+  margin-top: 30px;
+  font-weight: 100;
 }
 
 #footer a {
   color: white;
   font-weight: 100;
+}
+
+.social-button {
+  margin: 4px;
 }
