--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -2,11 +2,12 @@
   <br />
   <div class="frosty col-10 offset-1 text-center">
     <br />
-    <h1>The best videos</h1>
+    <h1>Picnix is the place to learn Photography</h1>
     <br />
-    <h2>Honestly</h2>
+    <h2>Learn through video.</h2>
+    <h3>All our lessons are videos that help to properly understand your course.</h3>
     <br />
-    <%= link_to 'Learn More', courses_path, class: 'btn btn-success' %>
+    <%= link_to 'Learn more about our courses!', courses_path, class: 'btn btn-success' %>
     <br />
     <br />
   </div>
@@ -27,8 +28,8 @@
   </div>
 
   <div class="col-12 col-sm">
-    <h3>Join a great community</h3>
+    <h3>Want to teach?</h3>
     <br />
-    <p>Need help? Just ask our community for a quick reply.</p>
+    <p>No problem! Just upload your own lessons and you can be teaching in no time!</p>
   </div>
 </div>
