--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,49 +1,55 @@
 <br />
 <div class="booyah-box col-10 offset-1">
-  <h1><%= @course.title %></h1>
-  <%= image_tag @course.image, class: 'img-fluid' %>
-  <br />
+  <h1 class="text-center"><%= @course.title %></h1>
+  <hr />
   <div class="row">
-    <div class="col-sm-4 col-12 text-center">
-      <span class="badge badge-secondary">
-        <%= number_to_currency @course.cost %>
-      </span>
-
-      <% if current_user && current_user == @course.user %>
-        <br />
-        <br />
-        <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
-      <% end %>
-
+    <div class="col-12 col-sm-6">
+      <%= image_tag @course.image, class: 'img-fluid' %>
       <br />
-      <br />
-      <% if current_user %>
-        <% if current_user.enrolled_in?(@course) %>
-          <h3 class="badge badge-info">You are Enrolled!</h3>
-        <% else %>
-          <% if @course.free? %>
-            <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
-          <% else %>
-            <%= form_tag course_enrollments_path(@course) do %>
-
-              <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                    data-email="<%= current_user.email %>"
-                    data-description="<%= @course.title %> (<%= number_to_currency @course.cost %>)"
-                    data-amount="<%= (@course.cost * 100).to_i %>"
-                    data-locale="auto"></script>
-            <% end %>
-          <% end %>
-        <% end %>
-      <% else %>
-        <h3 class="badge badge-info">Sign in to Enroll!</h3>
-      <% end %>
     </div>
+    <div class="col-12 col-sm-6">
+      <div class="row">
+        <div class="col-sm-6 col-12">
+          <%= @course.description %>
+        </div>
+        <div class="col-sm-6 col-12 text-center">
+          <span class="badge badge-secondary">
+            <%= number_to_currency @course.cost %>
+          </span>
 
+          <% if current_user && current_user == @course.user %>
+            <br />
+            <br />
+            <%= link_to 'Administer', instructor_course_path(@course), class: 'btn btn-danger btn-large' %>
+          <% end %>
 
+          <br />
+          <br />
+          <% if current_user %>
+            <% if current_user.enrolled_in?(@course) %>
+              <h3 class="badge badge-info">You are Enrolled!</h3>
+            <% else %>
+              <% if @course.free? %>
+                <%= link_to 'Enroll', course_enrollments_path(@course), class: 'btn btn-primary', method: :post %>
+              <% else %>
+                <%= form_tag course_enrollments_path(@course) do %>
 
-    <div class="col-sm-8 col-12">
-      <%= @course.description %>
+                  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                        data-email="<%= current_user.email %>"
+                        data-description="<%= @course.title %> (<%= number_to_currency @course.cost %>)"
+                        data-amount="<%= (@course.cost * 100).to_i %>"
+                        data-locale="auto">                      
+                  </script>
+
+                <% end %>
+              <% end %>
+            <% end %>
+          <% else %>
+            <h3 class="badge badge-info">Sign in to Enroll!</h3>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
 
