--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
               <%= link_to 'See all courses', courses_path, class: 'nav-link' %>
             </li>
           </ul>
-          <ul class="navbar-nav float-right">
+          <ul class="navbar-nav">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Students</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -35,7 +35,7 @@
                   <%= link_to 'Sign up', new_user_registration_path, class: 'dropdown-item' %>
                 <% end %>
                 <div class="dropdown-divider"></div>
-                <%= link_to 'About', '#', class: 'dropdown-item' %>
+                <%= link_to 'About', about_path, class: 'dropdown-item' %>
                 </div>
               </li>
           </ul>
@@ -68,22 +68,22 @@
             <%= link_to 'My Dashboard', dashboard_path %>
           </div>
           <div class="col-12 col-sm-3">
-            <b>About</b>
+            <%= link_to 'About', about_path %>
             <br />
-            <%= link_to 'Team', '#' %>
+            <%= link_to 'Team', team_path %>
             <br />
-            <%= link_to 'Careers', '#' %>
+            <%= link_to 'Careers', careers_path %>
             <br />
             <%= link_to 'Privacy Policy', privacy_path %>
           </div>
           <div class="col-12 col-sm-3">
             <b>Contact</b>
             <br />
-            ken@thefirehoseproject.com
+            charlie@poize.co.uk
             <br />
-            One Kendall Square
+            250 York Road
             <br />
-            Cambridge MA, 02113
+            London, SW11 3SJ
           </div>
           <div class="col-12 col-sm-3">
             <b>Social</b>
